K8s folder/project/hands on thing/task1/apache-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: apache-service
  namespace: apache-ns
  labels:
    app: apache
spec:
  selector:
    app: apache
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  type: ClusterIP
